--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+appdirs==1.4.4
 appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
@@ -12,6 +13,7 @@ backcall==0.2.0
 black==22.12.0
 boto3==1.26.37
 botocore==1.29.37
+cattrs==22.2.0
 certifi==2022.12.7
 cffi==1.15.1
 cfgv==3.3.1
@@ -38,6 +40,7 @@ django-storages==1.13.2
 django-stubs==1.13.1
 django-stubs-ext==0.7.0
 docutils==0.19
+esbonio==0.16.0
 executing==1.2.0
 factory-boy==3.2.1
 Faker==15.3.4
@@ -58,6 +61,7 @@ Jinja2==3.1.2
 jmespath==1.0.1
 lazy-object-proxy==1.8.0
 livereload==2.6.3
+lsprotocol==2022.0.0a10
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
@@ -81,11 +85,13 @@ pure-eval==0.2.2
 pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
+pygls==1.0.0
 Pygments==2.13.0
 PyJWT==2.6.0
 pylint==2.15.9
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
+pyspellchecker==0.7.1
 pytest==7.2.0
 pytest-django==4.5.2
 pytest-sugar==0.9.6
@@ -116,6 +122,7 @@ tomli==2.0.1
 tomlkit==0.11.6
 tornado==6.2
 traitlets==5.8.0
+typeguard==2.13.3
 types-pytz==2022.7.0.0
 types-PyYAML==6.0.12.2
 typing_extensions==4.4.0
