--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.ignoreWords": ["elmnt", "fullname", "puzzlee"]
+  "cSpell.ignoreWords": ["elmnt", "fullname", "maxsplit", "puzzlee"]
 }
