collect app models

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.ignoreWords": ["elmnt", "fullname", "maxsplit", "puzzlee"]
+  "cSpell.ignoreWords": [
+    "dtype",
+    "dtypes",
+    "elmnt",
+    "fullname",
+    "maxsplit",
+    "openaccess",
+    "puzzlee"
+  ]
 }
