--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ argon2-cffi-bindings==21.2.0
 asgiref==3.6.0
 astroid==2.12.13
 asttokens==2.2.1
+async-generator==1.10
 async-timeout==4.0.2
 attrs==22.2.0
 Babel==2.11.0
 backcall==0.2.0
+beautifulsoup4==4.11.2
 black==22.12.0
 boto3==1.26.37
 botocore==1.29.37
@@ -48,6 +50,7 @@ filelock==3.8.2
 flake8==6.0.0
 flake8-isort==6.0.0
 gunicorn==20.1.0
+h11==0.14.0
 hiredis==2.1.0
 identify==2.5.11
 idna==3.4
@@ -62,14 +65,18 @@ jmespath==1.0.1
 lazy-object-proxy==1.8.0
 livereload==2.6.3
 lsprotocol==2022.0.0a10
+lxml==4.9.2
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mypy==0.991
 mypy-extensions==0.4.3
 nodeenv==1.7.0
+numpy==1.24.2
 oauthlib==3.2.2
+outcome==1.2.0
 packaging==22.0
+pandas==1.5.3
 parso==0.8.3
 pathspec==0.10.3
 pexpect==4.8.0
@@ -91,6 +98,7 @@ PyJWT==2.6.0
 pylint==2.15.9
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
+PySocks==1.7.1
 pyspellchecker==0.7.1
 pytest==7.2.0
 pytest-django==4.5.2
@@ -104,8 +112,12 @@ redis==4.4.0
 requests==2.28.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
+selenium==4.8.2
 six==1.16.0
+sniffio==1.3.0
 snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soupsieve==2.4
 Sphinx==5.3.0
 sphinx-autobuild==2021.3.14
 sphinxcontrib-applehelp==1.0.2
@@ -122,6 +134,8 @@ tomli==2.0.1
 tomlkit==0.11.6
 tornado==6.2
 traitlets==5.8.0
+trio==0.22.0
+trio-websocket==0.9.2
 typeguard==2.13.3
 types-pytz==2022.7.0.0
 types-PyYAML==6.0.12.2
@@ -132,3 +146,4 @@ wcwidth==0.2.5
 Werkzeug==2.2.2
 whitenoise==6.2.0
 wrapt==1.14.1
+wsproto==1.2.0
