views for listpages and detail pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
   "cSpell.ignoreWords": [
+    "detailpage",
     "dtype",
     "dtypes",
     "elmnt",
     "fullname",
+    "listpage",
+    "listpages",
+    "lxml",
     "maxsplit",
     "openaccess",
     "puzzlee"
