--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ cffi==1.15.1
 cfgv==3.3.1
 charset-normalizer==2.1.1
 click==8.1.3
+Collectfast==2.2.0
 colorama==0.4.6
 coverage==7.0.1
 crispy-bootstrap5==0.7
