--- a/srv/production/nginx_puzzlee.conf
+++ b/srv/production/nginx_puzzlee.conf
@@ -7,8 +7,6 @@ upstream puzzlee_app_server {
 }
  
 server {
- 
-    listen   80;
     server_name puzzlee.art www.puzzlee.art;
  
     client_max_body_size 4G;
@@ -33,7 +31,7 @@ server {
  
         # enable this if and only if you use HTTPS, this helps Rack
         # set the proper protocol for doing redirects:
-        # proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Proto https;
  
         # pass the Host: header from the client right along so redirects
         # can be set properly within the Rack application
@@ -57,5 +55,35 @@ server {
             break;
         }
     }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/puzzlee.art/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/puzzlee.art/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+
+}
+
+ 
+server {
+    if ($host = www.puzzlee.art) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = puzzlee.art) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+ 
+    listen   80;
+    server_name puzzlee.art www.puzzlee.art;
+    return 404; # managed by Certbot
+
+
+
 
 }
