--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ h11==0.14.0
 hiredis==2.1.0
 identify==2.5.11
 idna==3.4
+ImageHash==4.3.1
 imagesize==1.4.1
 iniconfig==1.1.1
 ipdb==0.13.11
@@ -108,11 +109,13 @@ python-dateutil==2.8.2
 python-slugify==7.0.0
 python3-openid==3.2.0
 pytz==2022.7
+PyWavelets==1.5.0
 PyYAML==6.0
 redis==4.4.0
 requests==2.28.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
+scipy==1.12.0
 selenium==4.8.2
 six==1.16.0
 sniffio==1.3.0
